library-app/src/app.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@400;500;600;700;800&family=Poppins:wght@200;400;500;600&family=Roboto:wght@300;400;500;700;900&display=swap");
@import "https://unpkg.com/open-props";
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
  display: block;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  margin-top: 0;
  margin-bottom: 0;
}

input:not(input[type=checkbox]) {
  -webkit-appearance: none;
  -moz-appearance: none;
       appearance: none;
  font-family: inherit;
}

input[type=color],
input[type=date],
input[type=datetime],
input[type=datetime-local],
input[type=email],
input[type=month],
input[type=number],
input[type=password],
input[type=search],
input[type=tel],
input[type=text],
input[type=time],
input[type=url],
input[type=week],
select:focus,
textarea {
  font-size: 16px;
}

:root {
  --clr-accent: hsl(98, 82%, 74%);
  --clr-accent2: hsl(192, 21%, 48%);
  --clr-primary: hsl(0, 0%, 7%);
  --clr-white: hsl(0, 0%, 100%);
  --clr-light-gray: hsl(0, 0%, 51%);
  --clr-dark-gray: hsl(0, 0%, 17%);
  --clr-darker-gray: hsl(0, 0%, 10%);
  --clr-black: hsl(0, 0%, 0%);
  --clr-fav-red: hsl(0, 93%, 63%);
  --clr-fav-gold: hsl(51, 100%, 50%);
  --ff-1: "Poppins", sans-serif;
  --ff-2: "Bebas Neue", sans-serif;
  --ff-3: "Merriweather", serif;
  --ff-4: "Montserrat", sans-serif;
  --ff-5: "Open Sans", sans-serif;
  --ff-6: "Roboto", sans-serif;
  --radius: 0.5rem;
}

.container {
  width: 90%;
  max-width: 700px;
  margin-inline: auto;
}
@media (max-width: 768px) {
  .container {
    width: 100%;
  }
}

button,
span.material-symbols-outlined {
  cursor: pointer;
}

.favorite {
  color: var(--clr-fav-gold);
}

.read {
  color: var(--clr-accent);
}

.bookStatus {
  color: var(--clr-accent2);
}

.fill {
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background-color: hsl(0, 0%, 18%);
  font-family: var(--ff-4);
}

header {
  min-height: 4rem;
  color: var(--clr-white);
  display: flex;
  align-items: center;
  width: 100%;
}
header .inner-wrap {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-block: 0.8rem;
}
header .inner-wrap .logo {
  display: inline-flex;
  text-transform: uppercase;
  font-size: 2rem;
  font-weight: 900;
  margin-right: 1.5rem;
}
header .inner-wrap .logo span {
  color: var(--clr-accent);
}
header .inner-wrap .search {
  display: flex;
  background-color: var(--clr-primary);
  border-radius: 100vh;
  overflow: hidden;
}
header .inner-wrap .search:focus-within {
  outline: 3px solid var(--clr-accent);
}
header .inner-wrap .search select {
  background-color: var(--clr-darker-gray);
  border: none;
  color: var(--clr-white);
  font-weight: 500;
  font-family: var(--ff-4);
  padding-inline-start: 0.8rem;
  padding-inline-end: 0.5rem;
  text-align: center;
  font-size: 16px;
}
header .inner-wrap input[type=search] {
  font-family: var(--ff-1);
  background-color: var(--clr-primary);
  color: var(--clr-white);
  font-size: 1.05rem;
  border: none;
  height: 50px;
  width: 80%;
  max-width: 300px;
  padding-inline: 1rem;
}
header .inner-wrap input[type=search]:focus-visible {
  outline: none;
}
header .inner-wrap input[type=search]::-moz-placeholder {
  color: var(--clr-light-gray);
  font-size: 1rem;
  text-transform: capitalize;
  font-weight: 800;
}
header .inner-wrap input[type=search]::placeholder {
  color: var(--clr-light-gray);
  font-size: 1rem;
  text-transform: capitalize;
  font-weight: 800;
}
@media (max-width: 768px) {
  header .inner-wrap {
    flex-direction: column;
    padding-inline: 0.2rem;
    gap: 1rem;
    align-items: flex-start;
  }
  header .inner-wrap .search {
    width: 100%;
    border-radius: var(--radius);
  }
  header .inner-wrap input[type=search] {
    max-width: 1000px;
    flex: 1;
  }
}

main {
  flex: 1;
  background-color: var(--clr-primary);
  border-radius: var(--radius);
  padding: 2rem;
  position: relative;
  display: flex;
  flex-direction: column;
  max-height: 100vh;
  width: 100%;
}
main dialog {
  display: block;
  border: none;
  background-color: var(--clr-white);
  border-radius: var(--radius);
  z-index: 10;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 80%;
  max-width: 400px;
  padding: 2rem 0;
  background-color: var(--clr-darker-gray);
  transition: opacity 0.5s;
  animation: var(--animation-scale-down) forwards;
  animation-timing-function: var(--ease-squish-3);
}
main dialog[open] {
  animation: var(--animation-slide-in-up) forwards;
}
main dialog:not([open]) {
  pointer-events: none;
  opacity: 0;
}
main dialog::backdrop {
  -webkit-backdrop-filter: blur(0.25rem);
          backdrop-filter: blur(0.25rem);
}
main dialog .cancel span {
  --position: 0.5rem;
  color: var(--clr-accent);
  position: absolute;
  top: var(--position);
  right: var(--position);
  font-weight: 600;
  font-size: 1.5rem;
}
main dialog form .form-control {
  display: flex;
  flex-direction: column;
}
main dialog form .form-control label {
  font-weight: bold;
  color: var(--clr-white);
  margin-bottom: 0.5rem;
}
main dialog form .form-control input[type=text],
main dialog form .form-control input[type=number] {
  border: none;
  background-color: var(--clr-primary);
  border: 2px solid var(--clr-primary);
  border-radius: var(--radius);
  height: 40px;
  color: var(--clr-white);
  font-size: 1.2rem;
  padding-inline: 1rem;
  font-family: var(--ff-1);
}
main dialog form .form-control input[type=text]::-moz-placeholder, main dialog form .form-control input[type=number]::-moz-placeholder {
  color: var(--clr-light-gray);
  font-size: 0.9rem;
}
/* ... */

